test/compile_fail/effect_resource_context_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.effect.resource.Context;
}
